Create working leaderboard with a dark design

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Leaderboard</title>
-    <link rel="stylesheet" type="text/css" href="css/app.css">
+    <link rel="stylesheet" type="text/css" href="/css/app.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <div id="avaire-leaderboard">
+        <app></app>
+    </div>
 
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
